remove bad merge

--- a/HexBox.WinUI/Themes/DarkTheme.xaml
+++ b/HexBox.WinUI/Themes/DarkTheme.xaml
@@ -11,6 +11,6 @@
                      Color="#222222" />
     <SolidColorBrush x:Key="Background"
                      Color="Transparent" />
-    <SolidColorBrush x:Key="VerticalLineBrush"
+    <SolidColorBrush x:Key="VerticalSeparatorLineBrush"
                      Color="White" />
 </ResourceDictionary>
