--- a/HexBox.WinUI/Themes/LightTheme.xaml
+++ b/HexBox.WinUI/Themes/LightTheme.xaml
@@ -12,6 +12,6 @@
                      Color="#222222" />
     <SolidColorBrush x:Key="Background"
                      Color="Transparent" />
-    <SolidColorBrush x:Key="VerticalLineBrush"
+    <SolidColorBrush x:Key="VerticalSeparatorLineBrush"
                      Color="Blue" />
 </ResourceDictionary>
