--- a/HexBox.WinUI/Themes/DefaultTheme.xaml
+++ b/HexBox.WinUI/Themes/DefaultTheme.xaml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <SolidColorBrush x:Key="AddressBrush"
                      Color="CornflowerBlue" />
     <SolidColorBrush x:Key="AlternatingDataColumnTextBrush"
@@ -13,7 +12,6 @@
                      Color="Black" />
     <SolidColorBrush x:Key="Background"
                      Color="Transparent" />
-    <SolidColorBrush x:Key="VerticalLineBrush"
+    <SolidColorBrush x:Key="VerticalSeparatorLineBrush"
                      Color="Blue" />
-    
 </ResourceDictionary>
